# vuln-web-app

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/specs/: account-lockout-plan.md  account-lockout.md  app-foundation.md  bcrypt-password-hashing-plan.md  bcrypt-password-hashing.md  captcha-on-login-plan.md  captcha-on-login.md  continue-with-google-plan.md  continue-with-google.md  dark-mode-toggle-plan.md  dark-mode-toggle.md  email-otp-2fa-plan.md  email-otp-2fa.md  email-verification-on-signup-plan.md  email-verification-on-signup.md  mfa-via-authenticator-app-plan.md  mfa-via-authenticator-app.md  pwd-str-meter-plan.md  pwd-str-meter.md  qr-code-login-plan.md  qr-code-login.md  reflected-xss-fix-plan.md  reflected-xss-fix.md  sql-injection-fix-plan.md  sql-injection-fix.md  user-profile-page-plan.md  user-profile-page.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: captcha.py  config.py  mailer.py  oauth.py  qr_login.py  security.py
backend/app/db/: session.py
backend/app/services/: auth_service.py  lockout_service.py  oauth_service.py  otp_service.py  totp_service.py  verification_service.py
docs/: PRD.md  TDD.md  feature-user-profile-page.md  plan-user-profile-page.md
docs/prompts/: 1_gitignore_prompt  2_spec1_prompt  3_spec1_plan_prompt  4_spec1_plan_execution_prompt  bcrypt-spec-execution-prompt.txt  bcrypt-spec-plan-prompt.txt  bcrypt-spec-prompt.txt  captcha-on-login-execution-prompt.txt  captcha-on-login-plan-prompt.txt  captcha-on-login-spec-prompt.txt  (+3 more)
(+12 files in other folders)
