[project]
name = "part4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "segno>=1.6.0",
]
