[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnerable-app"
version = "1.0.0"
description = "Intentionally vulnerable web application for security education"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "segno>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest"]
